# OffsetAllocator

./: CMakeLists.txt  offsetAllocator.cpp  offsetAllocator.hpp  offsetAllocatorTests.cpp
tests/: CMakeLists.txt  main.cpp
